# x_compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aprog.S  cexp.S  cmake_install.cmake  comp  compile.sh  prog  prog.S  prog.dump  prog.elf  prog2.c  prog_alt  prog_alt.S  program.c  test.eco
.VSCodeCounter/2025-01-28_22-55-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: AST.cpp  AST.h  SymbolTable.h  TAC.h  TAC_to_ASM.h  codeGen.cpp  codeGen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
